--- a/ColorVisionGAN.ipynb
+++ b/ColorVisionGAN.ipynb
@@ -1,48 +1,8 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "machine_shape": "hm",
-      "gpuType": "L4",
-      "authorship_tag": "ABX9TyN6/7UpGEI2wEakzFzKwFp3",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/SarahPendhari/ColorVisionGAN/blob/main/ColorVisionGAN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Step 1: Setup and Imports"
-      ],
-      "metadata": {
-        "id": "i07ZYNAwqKxJ"
-      }
-    },
-    {
       "cell_type": "code",
-      "source": [
-        "!pip install tensorflow matplotlib opencv-python-headless pycocotools wget -q"
-      ],
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -50,20 +10,27 @@
         "id": "xdYfZ_w7uqZ6",
         "outputId": "c0bda0d5-580c-45ef-e314-fcfb4fdf6b96"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "  Building wheel for wget (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install tensorflow matplotlib opencv-python-headless pycocotools wget -q"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "XmSVRp37urN7"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "import wget\n",
@@ -80,15 +47,32 @@
         "# Extract annotations\n",
         "with zipfile.ZipFile(os.path.join(dataset_dir, 'annotations_trainval2017.zip'), 'r') as zip_ref:\n",
         "    zip_ref.extractall(dataset_dir)"
-      ],
-      "metadata": {
-        "id": "XmSVRp37urN7"
-      },
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-DB1ufZWut6J",
+        "outputId": "a5be1d6d-d791-48bb-c324-96c6857ae438"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "loading annotations into memory...\n",
+            "Done (t=0.75s)\n",
+            "creating index...\n",
+            "index created!\n",
+            "Train images shape: (100, 256, 256, 3)\n",
+            "Train labels shape: (100, 256, 256, 3)\n"
+          ]
+        }
+      ],
       "source": [
         "import cv2\n",
         "import numpy as np\n",
@@ -151,32 +135,15 @@
         "\n",
         "print(f\"Train images shape: {train_images.shape}\")\n",
         "print(f\"Train labels shape: {train_labels.shape}\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-DB1ufZWut6J",
-        "outputId": "a5be1d6d-d791-48bb-c324-96c6857ae438"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "loading annotations into memory...\n",
-            "Done (t=0.75s)\n",
-            "creating index...\n",
-            "index created!\n",
-            "Train images shape: (100, 256, 256, 3)\n",
-            "Train labels shape: (100, 256, 256, 3)\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "UmIE6_5Xu4Og"
+      },
+      "outputs": [],
       "source": [
         "import tensorflow as tf\n",
         "from tensorflow.keras.layers import Conv2D, Conv2DTranspose, LeakyReLU, Activation, Input\n",
@@ -213,15 +180,15 @@
         "\n",
         "generator = build_generator()\n",
         "discriminator = build_discriminator()"
-      ],
-      "metadata": {
-        "id": "UmIE6_5Xu4Og"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "tejU86uvvgD7"
+      },
+      "outputs": [],
       "source": [
         "def generator_loss(disc_generated_output, gen_output, target):\n",
         "    # Cast tensors to float32\n",
@@ -242,15 +209,15 @@
         "    generated_loss = tf.keras.losses.BinaryCrossentropy(from_logits=True)(tf.zeros_like(disc_generated_output), disc_generated_output)\n",
         "    total_disc_loss = real_loss + generated_loss\n",
         "    return total_disc_loss\n"
-      ],
-      "metadata": {
-        "id": "tejU86uvvgD7"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "NaBfees9vjaZ"
+      },
+      "outputs": [],
       "source": [
         "@tf.function\n",
         "def train_step(input_image, target):\n",
@@ -271,15 +238,15 @@
         "    # Update weights\n",
         "    generator_optimizer.apply_gradients(zip(gradients_of_generator, generator.trainable_variables))\n",
         "    discriminator_optimizer.apply_gradients(zip(gradients_of_discriminator, discriminator.trainable_variables))\n"
-      ],
-      "metadata": {
-        "id": "NaBfees9vjaZ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "PRUlWn-BvmWh"
+      },
+      "outputs": [],
       "source": [
         "# Define the number of epochs\n",
         "EPOCHS = 100\n",
@@ -313,15 +280,15 @@
         "            plt.imshow((display_list[i] * 0.5 + 0.5))\n",
         "            plt.axis('off')\n",
         "        plt.show()"
-      ],
-      "metadata": {
-        "id": "PRUlWn-BvmWh"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "vl0w0cNAv4YG"
+      },
+      "outputs": [],
       "source": [
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -388,21 +355,35 @@
         "plt.legend()\n",
         "plt.title('Training Losses')\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "vl0w0cNAv4YG"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "D4KAX_TLxBf4"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "authorship_tag": "ABX9TyN6/7UpGEI2wEakzFzKwFp3",
+      "gpuType": "L4",
+      "include_colab_link": true,
+      "machine_shape": "hm",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
